# ChangeLog for dev-lang/parrot
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/parrot/ChangeLog,v 1.70 2013/09/03 08:56:34 patrick Exp $

  03 Sep 2013; Patrick Lauer <patrick@gentoo.org> +files/perldoc.patch,
  parrot-5.6.0.ebuild:
  Fix for #454058, at last

  01 Aug 2013; Patrick Lauer <patrick@gentoo.org> -parrot-4.10.0.ebuild,
  -parrot-4.11.0.ebuild, -parrot-5.0.0.ebuild, -parrot-5.1.0.ebuild,
  -parrot-5.3.0.ebuild:
  Remove old

*parrot-5.6.0 (18 Jul 2013)

  18 Jul 2013; Patrick Lauer <patrick@gentoo.org> +parrot-5.6.0.ebuild:
  Bump

*parrot-5.5.0 (25 Jun 2013)

  25 Jun 2013; Patrick Lauer <patrick@gentoo.org> +parrot-5.5.0.ebuild:
  Bump

*parrot-5.4.0 (31 May 2013)

  31 May 2013; Patrick Lauer <patrick@gentoo.org> +parrot-5.4.0.ebuild:
  Bump

*parrot-5.3.0 (19 Apr 2013)

  19 Apr 2013; Patrick Lauer <patrick@gentoo.org> +parrot-5.3.0.ebuild:
  Bump

*parrot-5.1.0 (20 Feb 2013)

  20 Feb 2013; Patrick Lauer <patrick@gentoo.org> +parrot-5.1.0.ebuild:
  Bump

*parrot-5.0.0 (24 Jan 2013)

  24 Jan 2013; Patrick Lauer <patrick@gentoo.org> +parrot-5.0.0.ebuild,
  -parrot-4.4.0.ebuild, -parrot-4.5.0.ebuild, -parrot-4.6.0.ebuild,
  -parrot-4.7.0.ebuild, -parrot-4.8.0.ebuild, -parrot-4.9.0.ebuild:
  Bump

*parrot-4.11.0 (06 Jan 2013)

  06 Jan 2013; Patrick Lauer <patrick@gentoo.org> +parrot-4.11.0.ebuild:
  Bump

*parrot-4.10.0 (23 Nov 2012)

  23 Nov 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.10.0.ebuild:
  Bump

*parrot-4.9.0 (30 Oct 2012)

  30 Oct 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.9.0.ebuild:
  Bump

*parrot-4.8.0 (05 Oct 2012)

  05 Oct 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.8.0.ebuild:
  Bump

  20 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

*parrot-4.7.0 (23 Aug 2012)

  23 Aug 2012; Patrick Lauer <patrick@gentoo.org> +parrot-4.7.0.ebuild:
  Bump

*parrot-4.6.0 (19 Jul 2012)
