@@ -2,8 +2,10 @@ AUX perldoc.patch 1491 SHA256 ed3e385f6c57c34a828142ded341a954d9afd67270e77e2949
 DIST parrot-5.4.0.tar.gz 4601122 SHA256 4e37686911b446f5e5f2c0aa62138988ba0c411d2c5e2ba231d1a3421a85ad10 SHA512 fecda8746ca561b93ea9c2d3ed18f30a4d86c9be1fd43edecd7adc9a3d2c8eb9290d2d1e3f98d2a54e3acb1141a87aa2433e2c21bc2399ef7cbb3f2c9ee10626 WHIRLPOOL 26de51dddbf147248e5871f6de42c3a4a41ef771404fb412eef632159a098dc5a8fae03e16b049d190b87e21e362a2fddd90176a06db7bda2b900ee45c928015
 DIST parrot-5.5.0.tar.gz 4591639 SHA256 408a45660483499106a35107a836a80da27269a6d54bb114ba6e2249b2b9e9da SHA512 3d431ff035a5c43a511db120d9fb58f44acd62e3560e3f4e9e30ac38b6a7ca7d3c9a34c2ed174c6d494b7940884a8149e82613fbe96d090c86112f9f8fa72741 WHIRLPOOL fff807c3ccd4a8af2465708b6de72f124ebcd6b111f4bdec05366e0e7aeb0cf5c485cf62fe13c5c7fdfc1e0de9432b1f80e7df4adb3e7c5e2ea69db32b4b5f3e
 DIST parrot-5.6.0.tar.gz 4597748 SHA256 8e2d2ddaff36c2c960236c94f868f0eea28740e306345ee42df84bcd9aa146a6 SHA512 27823099bbcd75da56d7485da546f1baa6838322747c20cd79d6dce6bc32e10b0a84b299f7422031653e6a5adc04b4bda4d1f0209d45ab2ec50d55d64f82116b WHIRLPOOL 44f49a8b28451443cda75474ca17cea4075bd3c0d78a8d4caf198e3a79690c3d6271cb5c12db990df190fd5a0e6698c0da6332c55d6160cdf723947e6d2a6839
+DIST parrot-5.7.0.tar.gz 4604326 SHA256 0d07c210a8b90d368cde600351173b8c90a28d376379836ba36edf83acf7a21f SHA512 6db01c4c092f64cb7dbaab99972ddcea73183bbca18a9005871992ca57035d0adca5408af944e40e84095cc35badc6ebf611177fc3d73112577a2f1b7745de75 WHIRLPOOL dac3f775d67fc4f6c3baffc0e8d5176f7466827e19b2a96e0f3ae8ac6e0ecce5de7aa66a93e0265ed8867341169f0bc332501b05bf3fa251f35be2dd2a8663e1
 EBUILD parrot-5.4.0.ebuild 2506 SHA256 cb3b4a199f5dd8b74c580a85e406e5b280388b40e365a26770ce779e0fa1e858 SHA512 483824d390b853f942489975e5bfd45e3c1243806fa97ae6b191ed0d715c81be33371afa503539e6b0720ffc7d8e0638f076094f677888508d107a5ad06b0037 WHIRLPOOL 99cbee48d4767b38f857bc37f157b25bc58379faba0139185887c9a998674398b76aaf46383a3f2e63a426a1df8a25cc3904b23f8016df60039119476e6a2937
 EBUILD parrot-5.5.0.ebuild 2506 SHA256 71df40835e6511bc9ae286ba9acce72b0e86263fd49bca24aa09eb5d87a125ce SHA512 845dd5f01147af60df6ad72ed7964876b065a71c43dd039ad2db2e3ddd10afda0161081f7a602bc043befd7cb01063d081a3e3e75bf1f7dd8ab281ca0aadee1c WHIRLPOOL 0dd29e1e6c4ba979c5e673b382ca8c3b36765963e03f0e52bcac5a3b4ef8adc879f9a4adbe13f306b3834e9280b14ff2dc804685a736f639479088aabe5f25e7
 EBUILD parrot-5.6.0.ebuild 2580 SHA256 3eb7e308da53c9d2d7c15f40f82fa38d977cda799a04a9bec61bb4e8bcde53bf SHA512 139e28d0741a2d8cfd09f76d3347821c404b300f5c4ea7cfa8fe95339e246457f4b062b4baafe2395b96892a67887cae4b37a1ad3b5fc954e6f5b2ea36ba4684 WHIRLPOOL 07b20b09b970eb02515c4674ddf4fdbcd75f6c7fcd6627736c5e81cb8365b2957970994411eca88a2fd928b06c33a8241f7850788aea79542e4e75ebd89efcda
-MISC ChangeLog 9963 SHA256 f49c1e6b07b5186fcf82a760685b1f116a6d6a44b00f4c8ee542a6122f544187 SHA512 dd4019308d4e2d003cb0eedb29ba006b844267413041b8ca319a535597c2132c27ef7330cff5e003cb0d0b476bcc338c066da8e94ac9a915f4367ea2e1a99358 WHIRLPOOL 752e8605815e00c4810d682b93627d7cd4cbd4ab61ca4506bf49983305ab2a1043c89c4ae89a934d75ec9fc396a0b607a2f177cba126366ede4120ada6d3eaef
+EBUILD parrot-5.7.0.ebuild 2580 SHA256 f73d2ae6e4c53c79bbc6dd008b0825bc7714fad82ab7f74c3323feebf69c2685 SHA512 9c1d776acf457cc2faca02116aadbcd4b69c415976dbee1b03b25fc470c7305485c69a79a96cd90930018b6ec2a61d734c39c9eb9e48994c25d5f98e644d61a3 WHIRLPOOL 0ceef6a4ab5437c60b117a350cc028f6d6f01676d49f179e79b693bd2c5d3b484812a03280a9c88816f9c953db74c7df57d3718425c7940d37c7606726624032
+MISC ChangeLog 10072 SHA256 8e38549e0e12a574046ced02906d86cfa54b81a638a3c4a92e3ea8d5b47dec83 SHA512 aff406f2d01e4b0beca3b019d542e98da9f5ad11e9b94cddbe2297d3140f0eb4a56b468a359a7095b7b33fe0e4945d4df7781d43cccb1e440e4504ff7582bd50 WHIRLPOOL 8f05a8e8881bc8afd0debf5ef4fb5a329fc494707f4aca95eaeb84357ba2964b5771ec15d846ae35c4bed5e4fd444214036a8087d3fe4b846e02a395f41060c5
 MISC metadata.xml 157 SHA256 6a11fd41a2a210a9760849de398ef8c62cf46cc742d09b2e1781def7848fa1ec SHA512 95158d74d42674de03bc271c8dffa2264759c77681436de71fa9b3ad67f50b09394b0401e6df6dde526bc8dcd6ea666ed6767662bd63c3e92cb33b7b23e4ede8 WHIRLPOOL d3fdf14c384070120719ad4076cd04630790564f5bceda2a273e6481ea27a6fc6291e55d78cbf8bf99b73c7b42e8a1f286927c990702dceee97a63815cb33846
